<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin_"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.iqfarma.sgfmf.activity.FarmaciaActivity" >

        <TextView
            style="@style/textTitulo"
            android:text="@string/lbl_farmacia_razon_social" />

        <TextView
            android:id="@+id/lbl_farmacia_razon_social"
            style="@style/textContent"
            android:text="BOTICA 2 DE MAYO" />

        <TextView
            style="@style/textTitulo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/lbl_farmacia_ruc" />

        <TextView
            android:id="@+id/lbl_farmacia_ruc"
            style="@style/textContent"
            android:text="0000026065" />

        <TextView
            style="@style/textTitulo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/lbl_farmacia_direccion" />

        <TextView
            android:id="@+id/lbl_farmacia_direccion"
            style="@style/textContent"
            android:text="Jr. Las violetas CDR" />

        <TextView
            style="@style/textTitulo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/lbl_farmacia_telefono" />

        <TextView
            android:id="@+id/lbl_farmacia_telefono"
            style="@style/textContent"
            android:text="4545455" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <Button
                android:id="@+id/btn_pedido"
                style="@style/button_estilo1"
                android:text="@string/btn_pedido" />

            <Button
                android:id="@+id/btn_no_pedido"
                style="@style/button_estilo1"
                android:text="@string/btn_no_pedido" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>