<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lbl_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/lbl_muestra_numero"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_producto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/lbl_muestra_producto"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/lbl_muestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="18dp"
            android:text="@string/lbl_muestra_muestra"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cantidad"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textSize="18dp"
            android:text="@string/lbl_muestra_cantidad" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >
            
			<TextView
            android:id="@+id/posicion"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:visibility="gone" />

            <Button
                android:id="@+id/btn_mas"
                style="@style/button_estilo2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/lbl_muestra_mas" />

            <Button
                android:id="@+id/btn_menos"
                style="@style/button_estilo2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/lbl_muestra_menos" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>